// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index imdb, movie 1`] = `
[
  "media-status",
  "watched",
]
`;

exports[`index imdb, movie 2`] = `
[
  "my-media.json",
  [
    {
      "contentRating": "PG",
      "dateFinished": "2022-01-02T00:00:00.000Z",
      "description": "Dog Man, half dog and half man, he is sworn to protect and serve as he doggedly pursues the feline supervillain Petey the Cat.",
      "format": "movie",
      "genres": [
        "Animation",
        "Action",
        "Adventure",
      ],
      "identifier": "https://www.imdb.com/title/tt10954718/",
      "image": "movie-dog-man.jpg",
      "status": "watched",
      "thumbnail": "https://m.media-amazon.com/images/M/MV5BNDVlZGQyM2MtNjA2OS00MjdkLThiNDQtZTYzMTA1MGU3M2M0XkEyXkFqcGc@._V1_.jpg",
      "title": "Dog Man",
    },
  ],
]
`;

exports[`index imdb, tv 1`] = `
[
  "media-status",
  "watched",
]
`;

exports[`index imdb, tv 2`] = `
[
  "my-media.json",
  [
    {
      "contentRating": "TV-MA",
      "dateFinished": "2022-01-02T00:00:00.000Z",
      "description": "A look into the nightly lives of four vampires who have lived together on Staten Island for over a century.",
      "format": "tvseries",
      "genres": [
        "Comedy",
        "Fantasy",
        "Horror",
      ],
      "identifier": "https://www.imdb.com/title/tt7908628/",
      "image": "tvseries-what-we-do-in-the-shadows.jpg",
      "status": "watched",
      "thumbnail": "https://m.media-amazon.com/images/M/MV5BNDhiYTVlYjUtMDc4OC00NzBmLWE5YTYtNDBjZDc4MzM3YzNmXkEyXkFqcGc@._V1_.jpg",
      "title": "What We Do in the Shadows",
    },
  ],
]
`;

exports[`index rotten tomatoes, movie 1`] = `
[
  "media-status",
  "want to watch",
]
`;

exports[`index rotten tomatoes, movie 2`] = `
[
  "my-media.json",
  [
    {
      "contentRating": "PG",
      "dateAdded": "2025-01-05T00:00:00.000Z",
      "description": "Discover reviews, ratings, and trailers for Dog Man on Rotten Tomatoes. Stay updated with critic and audience scores today!",
      "format": "movie",
      "genres": [
        "Kids & Family",
        "Comedy",
        "Adventure",
        "Animation",
      ],
      "identifier": "https://www.rottentomatoes.com/m/dog_man",
      "image": "movie-dog-man.jpg",
      "status": "want to watch",
      "thumbnail": "https://resizing.flixster.com/HPdK25sm6ORpv8lKoGQhenwqpNI=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzL2YwMjdlMTNkLTkzYzEtNDFjYy05NzU1LTEyZWRlYzExMDBjYy5qcGc=",
      "title": "Dog Man",
    },
  ],
]
`;

exports[`index rotten tomatoes, tv 1`] = `
[
  "media-status",
  "watched",
]
`;

exports[`index rotten tomatoes, tv 2`] = `
[
  "my-media.json",
  [
    {
      "contentRating": "TV-MA",
      "dateFinished": "2025-01-05T00:00:00.000Z",
      "description": "Discover reviews, ratings, and trailers for What We Do in the Shadows on Rotten Tomatoes. Stay updated with critic and audience scores today!",
      "format": "tvseries",
      "genres": [
        "Comedy",
        "Horror",
      ],
      "identifier": "https://www.rottentomatoes.com/tv/what_we_do_in_the_shadows",
      "image": "tvseries-what-we-do-in-the-shadows.jpg",
      "status": "watched",
      "thumbnail": "https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p15501789_b_v13_as.jpg",
      "title": "What We Do in the Shadows",
    },
  ],
]
`;

exports[`index rotten tomatoes, tv episode 1`] = `
[
  "media-status",
  "watched",
]
`;

exports[`index rotten tomatoes, tv episode 2`] = `
[
  "my-media.json",
  [
    {
      "dateFinished": "2025-01-05T00:00:00.000Z",
      "description": "Discover reviews, ratings, and trailers for The Bear: Season 3, Episode 1 on Rotten Tomatoes. Stay updated with critic and audience scores today!",
      "format": "tvepisode",
      "genres": [
        "Comedy",
        "Drama",
      ],
      "identifier": "https://www.rottentomatoes.com/tv/the_bear/s03/e01",
      "image": "tvepisode-the-bear-season-3-tomorrow.gif",
      "status": "watched",
      "thumbnail": "https://images.fandango.com/cms/assets/5d84d010-59b1-11ea-b175-791e911be53d--rt-poster-defaultgif.gif",
      "title": "The Bear, Season 3, Tomorrow",
    },
  ],
]
`;

exports[`index rotten tomatoes, tv season 1`] = `
[
  "media-status",
  "watching",
]
`;

exports[`index rotten tomatoes, tv season 2`] = `
[
  "my-media.json",
  [
    {
      "dateStarted": "2025-01-05T00:00:00.000Z",
      "description": "Discover reviews, ratings, and trailers for The Bear: Season 3 on Rotten Tomatoes. Stay updated with critic and audience scores today!",
      "format": "tvseason",
      "genres": [
        "Comedy",
        "Drama",
      ],
      "identifier": "https://www.rottentomatoes.com/tv/the_bear/s03",
      "image": "tvseason-the-bear-season-3.jpg",
      "status": "watching",
      "thumbnail": "https://resizing.flixster.com/VWRmuGWA9qZtOSVUywPIRcSYZ2w=/ems.cHJkLWVtcy1hc3NldHMvdHZzZWFzb24vZDM3YjRjMmMtNThlYy00MmI3LWI2NDQtMTgxZTg3NWY5ZGRmLmpwZw==",
      "title": "The Bear, Season 3",
    },
  ],
]
`;
